plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.graalvm.buildtools.native' version '0.9.28'
}

group = 'com.kousenit'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
    maven { setUrl("https://jitpack.io") }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // JLayer for MP3 support
    implementation("com.github.umjammer:jlayer:1.0.2")

    // Jsoup for web scraping
    implementation("org.jsoup:jsoup:1.17.2")
    implementation("org.apache.tika:tika-core:2.9.1")
    implementation("org.apache.tika:tika-parsers-standard-package:2.9.1")

    // Make security warnings go away
    implementation("org.apache.commons:commons-compress:1.26.1")
    implementation("org.apache.james:apache-mime4j-core:0.8.11")

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    implementation("io.netty:netty-resolver-dns-native-macos:4.1.101.Final") {
        artifact {
            classifier = "osx-aarch_64"
        }
    }
}

tasks.named('test', Test) {
    useJUnitPlatform {
        includeTags('current')
    }
    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
}
